frontend/LibraryFrontEnd/src/Component/Opinions/OpinionCreate/OpinionCreate.css
.opinionCreateCard--grid {
  display: grid;
  grid-template-rows: 20% 65% 15%;
  width: 18rem;
  min-width: 18rem;
  height: 29rem;
  margin: 0 1rem 2rem 1rem;
  border: 1px grey solid;
  border-radius: 10px;
}

.opinionCreateCard--grid:hover {
    border: 1px var(--cardborder-hover) solid;
}

.opinionCreate__header {
  border-radius: 10px;
}

.opinionCreate--natural {
    background: var(--backgroundcolor-whitesmoke);
}

.opinionCreate--black {
    background: var(--backgroundcolor-darkmode);
    color: var(--fontcolor-dark);
}

.opinionCreateCard--black--grid {
    border: 1px var(--cardbordercolor_dark) solid;
}

.opinionCreate__main--grid {
  display:grid;
  grid-template-rows: 25% 75%;
}
.opinionCreate__rateText {
  font-weight: bold;
  font-size: 1.125rem;
}

.opinionCreate__inputs--grid {
  display: grid;
  grid-template-rows: 65% 20% 15%;
}

.opinionCreate__view {
    margin: 0 2%;
    border-radius: 10px;
    background-color: inherit;
    color: inherit;
    font-size: 1.25rem;
    max-width: 16.5rem;
    resize: none;
    border: 1px var(--forminputcolor) solid;
}

.opinionCreate__input {
    margin: 2%;
    max-width: 16.5rem;
    font-size: 1.25rem;
    color: inherit;
    border: 1px var(--forminputcolor) solid;
}

.opinionCreate__footer--flex {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20%;
}
.validation__errorMessage {
  color: red;
  background-color: transparent;
  font-size:1rem;
  font-weight: bold;
}

.opinionCreate__postButton {
  font-weight: bold;
  font-size: 1.125rem;
  margin: auto 5%;
}

.opinionCreate__cancelButon {
  margin: auto 5%;
  font-size: 1.125rem;
}

